--- a/css/contacts.css
+++ b/css/contacts.css
@@ -6,7 +6,7 @@
     color: white;
     text-align: center;
     padding: 100px 20px;
-    margin-top: 100px;
+    margin-top: 0;
 }
 
 .contacts-hero h1 {
