--- a/css/work.css
+++ b/css/work.css
@@ -11,7 +11,7 @@
     justify-content: center;
     color: white;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 0;
 }
 
 .work-hero-content h1 {
