--- a/css/bvdoma.css
+++ b/css/bvdoma.css
@@ -19,7 +19,7 @@
     justify-content: center;
     color: white;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 0;
     padding: 40px 20px;
 }
 
