--- a/css/about.css
+++ b/css/about.css
@@ -9,7 +9,7 @@
     justify-content: center;
     color: white;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 0;
 }
 
 .about-hero-content h1 {
