--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
     height: calc(100vh - 70px);
     position: relative;
     overflow: hidden;
-    margin-top: -70px;
+    margin-top: 0;
 }
 
 .slide {
